--- a/src/docs/asciidoc/snippets/event-create/curl-request.adoc
+++ b/src/docs/asciidoc/snippets/event-create/curl-request.adoc
@@ -1,13 +1,13 @@
 [source,bash]
 ----
-$ curl 'https://parabole.com:50667/api/v1/event' -i -X POST \
+$ curl 'https://parabole.com:56955/api/v1/event' -i -X POST \
     -H 'Accept: application/json, application/javascript, text/javascript, text/json' \
     -H 'Content-Type: application/json' \
     -d '{
   "userId" : 1,
   "createdBy" : "SELLER",
   "type" : "RAFFLE",
-  "title" : "이벤트 제목 BY REST DOCS",
+  "title" : "fasdsdsadCS",
   "startAt" : "2022-11-10 24:00:00",
   "endAt" : "2022-11-28 18:00:00",
   "descript" : "이벤트 설명 v2",
@@ -16,7 +16,7 @@ $ curl 'https://parabole.com:50667/api/v1/event' -i -X POST \
     "eventDetailImg" : "detail.url"
   },
   "eventPrizeCreateRequestDtos" : [ {
-    "id" : 72,
+    "id" : 130,
     "type" : "PRODUCT",
     "stock" : 40
   } ]
