--- a/src/docs/asciidoc/snippets/event-create/http-request.adoc
+++ b/src/docs/asciidoc/snippets/event-create/http-request.adoc
@@ -3,14 +3,14 @@
 POST /api/v1/event HTTP/1.1
 Accept: application/json, application/javascript, text/javascript, text/json
 Content-Type: application/json
-Host: parabole.com:50667
-Content-Length: 435
+Host: parabole.com:56955
+Content-Length: 418
 
 {
   "userId" : 1,
   "createdBy" : "SELLER",
   "type" : "RAFFLE",
-  "title" : "이벤트 제목 BY REST DOCS",
+  "title" : "fasdsdsadCS",
   "startAt" : "2022-11-10 24:00:00",
   "endAt" : "2022-11-28 18:00:00",
   "descript" : "이벤트 설명 v2",
@@ -19,7 +19,7 @@ Content-Length: 435
     "eventDetailImg" : "detail.url"
   },
   "eventPrizeCreateRequestDtos" : [ {
-    "id" : 72,
+    "id" : 130,
     "type" : "PRODUCT",
     "stock" : 40
   } ]
