--- a/src/docs/asciidoc/snippets/event-create/request-body.adoc
+++ b/src/docs/asciidoc/snippets/event-create/request-body.adoc
@@ -4,7 +4,7 @@
   "userId" : 1,
   "createdBy" : "SELLER",
   "type" : "RAFFLE",
-  "title" : "fasdsdsadCS",
+  "title" : "이벤트 등록 BY REST DOCS",
   "startAt" : "2022-11-10 24:00:00",
   "endAt" : "2022-11-28 18:00:00",
   "descript" : "이벤트 설명 v2",
@@ -13,7 +13,7 @@
     "eventDetailImg" : "detail.url"
   },
   "eventPrizeCreateRequestDtos" : [ {
-    "id" : 132,
+    "id" : 134,
     "type" : "PRODUCT",
     "stock" : 40
   } ]
