Docs: 쿠폰에 대한 설명 수정 [#184]

--- a/src/docs/asciidoc/snippets/get-orderinfo-list-by-user/response-fields.adoc
+++ b/src/docs/asciidoc/snippets/get-orderinfo-list-by-user/response-fields.adoc
@@ -87,7 +87,7 @@
 
 |`+data.orderBySellerDtoList.[].couponDto+`
 |`+Object+`
-|쿠폰 정보
+|쿠폰 정보(할인율 쿠폰:RATE, 금액 할인 쿠폰:AMOUNT)
 
 |`+data.orderBySellerDtoList.[].couponDto.rateCoupon+`
 |`+Array+`
