--- a/src/docs/asciidoc/snippets/update-order/request-fields.adoc
+++ b/src/docs/asciidoc/snippets/update-order/request-fields.adoc
@@ -21,18 +21,6 @@
 |`+String+`
 |쿠폰 시리얼 넘버
 
-|`+userName+`
-|`+String+`
-|사용자 이름
-
-|`+userEmail+`
-|`+String+`
-|사용자 이메일
-
-|`+userPhone+`
-|`+String+`
-|사용자 전화번호
-
 |`+receiverName+`
 |`+String+`
 |받는사람 이름
@@ -47,19 +35,11 @@
 
 |`+addressDetail+`
 |`+String+`
-|상세 주소지
+|상세 주소지(현재는 주소록API와 연결되지 않아 Simple/Detail을 동일하게 사용)
 
 |`+deliveryComment+`
 |`+String+`
 |배송 메세지
-
-|`+orderState+`
-|`+String+`
-|주문 상태. {'BEFORE_PAY': '주문 확정 전', 'PAY_COMPLETE': '주문 확정', 'DELIVERY_COMPLETE': '모든 배송 완료', 'ERROR': '에러'}
-
-|`+orderInfoState+`
-|`+String+`
-|상세주문 상태. {'BEFORE_PAY': '입금 전', 'PAY_COMPLETE': '주문완료(결제)', 'BEFORE_DELIVERY': '배송준비', 'DELIVERY': '배송중', 'DELIVERY_COMPLETE': '배송완료', 'BEFORE_ORDER': '주문 전', 'ORDER_CANCEL': '주문 취소', 'REFUND': '환불', 'ERROR': '에러'}
 
 |`+orderPayState+`
 |`+String+`
