--- a/src/docs/asciidoc/snippets/event-create/http-response.adoc
+++ b/src/docs/asciidoc/snippets/event-create/http-response.adoc
@@ -4,16 +4,22 @@ HTTP/1.1 201 Created
 Vary: Origin
 Vary: Access-Control-Request-Method
 Vary: Access-Control-Request-Headers
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Mon, 07 Nov 2022 03:16:42 GMT
+Date: Thu, 10 Nov 2022 03:38:16 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
-Content-Length: 83
+Content-Length: 82
 
 {
   "success" : true,
   "message" : "이벤트 등록 성공",
-  "data" : 105
+  "data" : 24
 }
 ----
