--- a/src/docs/asciidoc/snippets/cart-update-cnt/curl-request.adoc
+++ b/src/docs/asciidoc/snippets/cart-update-cnt/curl-request.adoc
@@ -1,12 +1,12 @@
 [source,bash]
 ----
-$ curl 'https://parabole.com:56085/api/v1/cart/update/cnt' -i -X PATCH \
+$ curl 'https://parabole.com:57164/api/v1/cart/update/cnt' -i -X PATCH \
     -H 'Accept: application/json, application/javascript, text/javascript, text/json' \
+    -H 'Authorization: Bearer eyJhbGciOiJIUzI1NiJ9.eyJzZWxsZXJTdG9yZW5hbWUiOiJ1MS1zMSdzIHN0b3JlIiwicm9sZSI6IlJPTEVfU0VMTEVSIiwic2VsbGVySWQiOjEsInBob25lIjoiMDEwNTc3ODUwMjMiLCJuaWNrbmFtZSI6InRlc3QiLCJ1c2VySWQiOjEsImVtYWlsIjoidGVzdEB0ZXN0LmNvbSIsInVzZXJuYW1lIjoidGVzdCIsImlhdCI6MTY2ODI0OTM1NiwiZXhwIjoxNjY4MzM1NzU2fQ.436Z2yY9zl50lEtyVmKezzUmIJogZ4OJA93P7fvhqhw' \
     -H 'Content-Type: application/json' \
     -d '{
   "productId" : 3,
   "cnt" : 10,
-  "userId" : 3,
-  "cartItemId" : 153
+  "cartItemId" : 24
 }'
 ----
