--- a/src/docs/asciidoc/snippets/cart-update-cnt/http-request.adoc
+++ b/src/docs/asciidoc/snippets/cart-update-cnt/http-request.adoc
@@ -2,14 +2,14 @@
 ----
 PATCH /api/v1/cart/update/cnt HTTP/1.1
 Accept: application/json, application/javascript, text/javascript, text/json
+Authorization: Bearer eyJhbGciOiJIUzI1NiJ9.eyJzZWxsZXJTdG9yZW5hbWUiOiJ1MS1zMSdzIHN0b3JlIiwicm9sZSI6IlJPTEVfU0VMTEVSIiwic2VsbGVySWQiOjEsInBob25lIjoiMDEwNTc3ODUwMjMiLCJuaWNrbmFtZSI6InRlc3QiLCJ1c2VySWQiOjEsImVtYWlsIjoidGVzdEB0ZXN0LmNvbSIsInVzZXJuYW1lIjoidGVzdCIsImlhdCI6MTY2ODI0OTM1NiwiZXhwIjoxNjY4MzM1NzU2fQ.436Z2yY9zl50lEtyVmKezzUmIJogZ4OJA93P7fvhqhw
 Content-Type: application/json
-Host: parabole.com:56085
-Content-Length: 73
+Host: parabole.com:57164
+Content-Length: 60
 
 {
   "productId" : 3,
   "cnt" : 10,
-  "userId" : 3,
-  "cartItemId" : 153
+  "cartItemId" : 24
 }
 ----
