--- a/src/docs/asciidoc/snippets/cart-delete/http-response.adoc
+++ b/src/docs/asciidoc/snippets/cart-delete/http-response.adoc
@@ -4,12 +4,18 @@ HTTP/1.1 200 OK
 Vary: Origin
 Vary: Access-Control-Request-Method
 Vary: Access-Control-Request-Headers
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Mon, 31 Oct 2022 12:49:12 GMT
+Date: Sat, 12 Nov 2022 10:35:56 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
-Content-Length: 83
+Content-Length: 87
 
 {
   "success" : true,
