--- a/src/docs/asciidoc/snippets/create-orderinfo/http-response.adoc
+++ b/src/docs/asciidoc/snippets/create-orderinfo/http-response.adoc
@@ -4,9 +4,15 @@ HTTP/1.1 201 Created
 Vary: Origin
 Vary: Access-Control-Request-Method
 Vary: Access-Control-Request-Headers
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Mon, 07 Nov 2022 03:39:06 GMT
+Date: Sat, 12 Nov 2022 10:48:13 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
 Content-Length: 106
