--- a/src/docs/asciidoc/snippets/get-orderinfo-list-by-user/response-fields.adoc
+++ b/src/docs/asciidoc/snippets/get-orderinfo-list-by-user/response-fields.adoc
@@ -45,10 +45,6 @@
 |`+String+`
 |상세 주문 상태. {'BEFORE_PAY': '입금 전', 'PAY_COMPLETE': '주문완료(결제)', 'BEFORE_DELIVERY': '배송 준비', 'DELIVERY': '배송 중', 'DELIVERY_COMPLETE': '배송 완료', 'BEFORE_ORDER': '주문 전', 'ORDER_CANCEL': '주문 취소', 'REFUND': '환불', 'ERROR': '에러'}
 
-|`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].userId+`
-|`+Number+`
-|유저 ID
-
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].userEmail+`
 |`+String+`
 |유저 이메일
@@ -66,7 +62,7 @@
 |주문한 상품 개수
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productRemain+`
-|`+Null+`
+|`+Number+`
 |남아있는 상품 재고
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productPrice+`
@@ -78,7 +74,7 @@
 |상품 할인 가격
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productThumbnailImg+`
-|`+Null+`
+|`+String+`
 |상품 썸네일
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].updatedAt+`
