--- a/src/docs/asciidoc/snippets/update-order/http-response.adoc
+++ b/src/docs/asciidoc/snippets/update-order/http-response.adoc
@@ -1,19 +1,25 @@
 [source,http,options="nowrap"]
 ----
-HTTP/1.1 401 Unauthorized
+HTTP/1.1 200 OK
 Vary: Origin
 Vary: Access-Control-Request-Method
 Vary: Access-Control-Request-Headers
+X-Content-Type-Options: nosniff
+X-XSS-Protection: 1; mode=block
+Cache-Control: no-cache, no-store, max-age=0, must-revalidate
+Pragma: no-cache
+Expires: 0
+X-Frame-Options: DENY
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Mon, 07 Nov 2022 07:57:58 GMT
+Date: Sat, 12 Nov 2022 10:32:56 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
-Content-Length: 124
+Content-Length: 81
 
 {
-  "success" : false,
-  "message" : "주문정보를 수정하는 중 문제가 발생했습니다.",
+  "success" : true,
+  "message" : "주문 결제 완료",
   "data" : null
 }
 ----
