--- a/src/docs/asciidoc/snippets/update-order/request-body.adoc
+++ b/src/docs/asciidoc/snippets/update-order/request-body.adoc
@@ -1,9 +1,9 @@
 [source,options="nowrap"]
 ----
 {
-  "addressSimple" : "광진구 12-33",
+  "addressSimple" : "광진구",
   "receiverPhone" : "010-2345-6789",
-  "addressDetail" : "광진구 12-33",
+  "addressDetail" : "12-33",
   "orderId" : 1,
   "orderPayState" : "NAVER_PAY",
   "receiverName" : "김파라",
@@ -11,7 +11,6 @@
   "orderInfoRequestList" : [ {
     "couponSerialNo" : "",
     "orderInfoIdList" : [ 1, 2, 3 ]
-  } ],
-  "userId" : 3
+  } ]
 }
 ----
