--- a/src/docs/asciidoc/snippets/auth-signin/request-body.adoc
+++ b/src/docs/asciidoc/snippets/auth-signin/request-body.adoc
@@ -2,7 +2,7 @@
 ----
 {
   "id" : null,
-  "email" : "testest@naver.com",
+  "email" : "test@test.com",
   "name" : null,
   "nickname" : null,
   "phone" : null,
