--- a/src/docs/asciidoc/snippets/auth-signin/curl-request.adoc
+++ b/src/docs/asciidoc/snippets/auth-signin/curl-request.adoc
@@ -1,11 +1,11 @@
 [source,bash]
 ----
-$ curl 'https://parabole.com:51044/api/v1/auth/signin' -i -X POST \
+$ curl 'https://parabole.com:55186/api/v1/auth/signin' -i -X POST \
     -H 'Accept: application/json, application/javascript, text/javascript, text/json' \
     -H 'Content-Type: application/json' \
     -d '{
   "id" : null,
-  "email" : "testest@naver.com",
+  "email" : "test@test.com",
   "name" : null,
   "nickname" : null,
   "phone" : null,
