--- a/src/docs/asciidoc/snippets/auth-signin/http-request.adoc
+++ b/src/docs/asciidoc/snippets/auth-signin/http-request.adoc
@@ -3,12 +3,12 @@
 POST /api/v1/auth/signin HTTP/1.1
 Accept: application/json, application/javascript, text/javascript, text/json
 Content-Type: application/json
-Host: parabole.com:51044
-Content-Length: 189
+Host: parabole.com:55186
+Content-Length: 185
 
 {
   "id" : null,
-  "email" : "testest@naver.com",
+  "email" : "test@test.com",
   "name" : null,
   "nickname" : null,
   "phone" : null,
