--- a/src/docs/asciidoc/snippets/auth-signin/httpie-request.adoc
+++ b/src/docs/asciidoc/snippets/auth-signin/httpie-request.adoc
@@ -2,14 +2,14 @@
 ----
 $ echo '{
   "id" : null,
-  "email" : "testest@naver.com",
+  "email" : "test@test.com",
   "name" : null,
   "nickname" : null,
   "phone" : null,
   "token" : null,
   "password" : "test",
   "passwordConfirmation" : null
-}' | http POST 'https://parabole.com:51044/api/v1/auth/signin' \
+}' | http POST 'https://parabole.com:55186/api/v1/auth/signin' \
     'Accept:application/json, application/javascript, text/javascript, text/json' \
     'Content-Type:application/json'
 ----
