--- a/src/docs/asciidoc/snippets/auth-signin/response-body.adoc
+++ b/src/docs/asciidoc/snippets/auth-signin/response-body.adoc
@@ -1,8 +1,19 @@
 [source,options="nowrap"]
 ----
 {
-  "success" : false,
-  "message" : "존재하지 않는 계정입니다.",
-  "data" : null
+  "success" : true,
+  "message" : "기본 로그인 성공",
+  "data" : {
+    "userId" : 1,
+    "email" : "test@test.com",
+    "name" : "test",
+    "nickname" : "test",
+    "phone" : "01057785023",
+    "imageUrl" : null,
+    "role" : "ROLE_USER",
+    "authProvider" : null,
+    "sellerId" : null,
+    "token" : "eyJhbGciOiJIUzI1NiJ9.eyJyb2xlIjoiUk9MRV9VU0VSIiwicGhvbmUiOiIwMTA1Nzc4NTAyMyIsIm5pY2tuYW1lIjoidGVzdCIsInVzZXJJZCI6MSwiZW1haWwiOiJ0ZXN0QHRlc3QuY29tIiwidXNlcm5hbWUiOiJ0ZXN0IiwiaWF0IjoxNjY4NDA4NTI3LCJleHAiOjE2Njg0OTQ5Mjd9.s5Lz7Ym5MUk6ncALLqWcZC_RxkmaHZL_O5biNl8cHfo"
+  }
 }
 ----
