--- a/src/docs/asciidoc/snippets/coupon-add-seller/http-response.adoc
+++ b/src/docs/asciidoc/snippets/coupon-add-seller/http-response.adoc
@@ -12,18 +12,18 @@ Expires: 0
 X-Frame-Options: DENY
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Mon, 14 Nov 2022 06:30:07 GMT
+Date: Mon, 14 Nov 2022 07:22:48 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
-Content-Length: 271
+Content-Length: 238
 
 {
   "success" : true,
   "message" : "쿠폰 등록 성공",
   "data" : {
-    "couponId" : 10,
+    "couponId" : 7,
     "couponName" : "크리스마스 기념 쿠폰",
-    "sellerStorename" : "user3은 userId7인데 seller가 될거에요",
+    "sellerStorename" : "u1-s1's store",
     "type" : "AMOUNT",
     "cnt" : 5
   }
