--- a/src/docs/asciidoc/snippets/coupon-add-seller/response-body.adoc
+++ b/src/docs/asciidoc/snippets/coupon-add-seller/response-body.adoc
@@ -4,9 +4,9 @@
   "success" : true,
   "message" : "쿠폰 등록 성공",
   "data" : {
-    "couponId" : 10,
+    "couponId" : 7,
     "couponName" : "크리스마스 기념 쿠폰",
-    "sellerStorename" : "user3은 userId7인데 seller가 될거에요",
+    "sellerStorename" : "u1-s1's store",
     "type" : "AMOUNT",
     "cnt" : 5
   }
