Fix: index에 쿠폰으로 이동가능하도록 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -34,3 +34,7 @@ link:event.html[Go To Event Page]
 == User (사용자)
 
 link:user.html[Go To Event Page]
+
+== Coupon (쿠폰)
+
+link:coupon.html[Go To Coupon Page]
